[project]
name = "seattle-film-calendar"
version = "1.2.1"
description = "Film calendar aggregator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4==4.12.3",
    "click==8.1.7",
    "feedgenerator==2.1.0",
    "icalendar==6.0.1",
    "pytz==2024.2",
    "requests==2.32.3",
    "tomli==2.0.2",
    "xxhash==3.5.0",
]

[project.scripts]
film-calendar = "filmcalendar.scripts.film_calendar:cli"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black/ruff-format)
]

[tool.ruff.lint.isort]
known-first-party = ["filmcalendar"]
