[project]
name = "seattle-film-calendar"
version = "1.2.7"
description = "Film calendar aggregator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.15.0",
    "click==8.4.2",
    "feedgenerator==2.2.1",
    "icalendar==7.2.0",
    "pytz==2026.2",
    "requests==2.34.2",
    "tomli==2.4.1",
    "xxhash==3.8.0",
]

[project.scripts]
film-calendar = "filmcalendar.scripts.film_calendar:cli"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black/ruff-format)
]

[tool.ruff.lint.isort]
known-first-party = ["filmcalendar"]
